# utl

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml  cmake.yml  process-new-branch.yml
include/utl/: anonymous_identifier.hpp  common.hpp  concatenate.hpp  default_copy_operations.hpp  default_copyable.hpp  default_movable.hpp  default_move_operations.hpp  hash.hpp  macro.hpp  non_constructable.hpp  non_constructible.hpp  non_copyable.hpp  range.hpp  repeat.hpp  scope_exit.hpp  scope_guard.hpp  static_block.hpp  storage.hpp  string_literal.hpp  string_literal_template.hpp  timer.hpp  type.hpp  type_id.hpp  type_info.hpp  type_traits.hpp  unique_identifier.hpp  utl.hpp
include/utl/detail/: scope_exit.hpp
test/: .clang-format  main.cpp  test_main.cpp
test/include/: test.hpp  tests.hpp
test/include/impl/: test.inl
test/src/: main.cpp  test.cpp  test_default_copy_operations.cpp  test_default_copyable.cpp  test_default_movable.cpp  test_default_move_operations.cpp  test_hash.cpp  test_non_constructible.cpp  test_non_copyable.cpp  test_range.cpp  test_repeat.cpp  test_scope_guard.cpp  test_static_block.cpp  test_string_literal.cpp  test_string_literal_template.cpp  test_timer.cpp  test_type_id.cpp  test_type_info.cpp  test_type_traits.cpp  tests.cpp
test/src/utl/: default_copyable.cpp  default_movable.cpp  hash.cpp  non_constructible.cpp  non_copyable.cpp  range.cpp  repeat.cpp  scope_guard.cpp  static_block.cpp  string_literal.cpp  timer.cpp  type_id.cpp  type_info.cpp  type_traits.cpp
